// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package dcl;

enum LifecycleDirective {
  DIRECTIVE_UNKNOWN = 0;

  // Block deleting the resource.  This will cause some
  // Apply operations to be impossible - some fields
  // cannot be modified and require a destroy/recreate.
  BLOCK_DESTRUCTION = 1;

  // Error if the resource already exists.
  BLOCK_ACQUIRE = 2;

  // Error if the resource does not exist.
  BLOCK_CREATION = 3;

  // Error if the resource is not in the desired state.
  BLOCK_MODIFICATION = 4;

  // Do not create (and do not error) if the resource
  // does not exist.
  IGNORE_IF_MISSING = 5;

  // Do not destroy the resource, even if Delete() is
  // called.
  NOOP_ON_DESTROY = 6;
}
